gcc/testsuite/rust/rustc/ui/parser/lit-err-in-macro_dg.rs
macro_rules! f {
    ($abi:literal) => {
        extern $abi fn f() {}
    }
}

f!("Foo"__);
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

